synaptic (0.62.1ubuntu9) intrepid; urgency=low

  * gtk/rgmainwindow.cc:
    - only xapian search when more than one char is used
      in the search querry (LP: #260739)

 --

synaptic (0.62.1ubuntu8) intrepid; urgency=low

  * common/rpackageview.cc:
    - add new "Missing Recommends" default filter
  * common/rpackage.cc:
    - fix code to get candidate origin
    - support getting the candidate release file name
  * common/rpackagestatus.cc:
    - support maintenanceEndTime() (if the distro supports that)
  * 10_ubuntu_maintenance_gui.dpatch:
    - add support for displaying when the maintaince ends

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 22 Aug 2008 12:40:10 +0200

synaptic (0.62.1ubuntu7) intrepid; urgency=low

  * debian/control:
    - add apt-xapian-index to the recommends again, we have some
      space on the CDs again (thanks to Steve Langasek)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 19 Jun 2008 14:45:42 +0200

synaptic (0.62.1ubuntu6) intrepid; urgency=low

  * gtk/rgdebinstallprogress.cc:
    - make sure that SIGCHLD is not blocked to work around
      kdesudo (LP: #156041)
  * common/rpackageview.cc:
    - add new "Missing Recommends" default filter
    - fix incorrect display of the "Community Maintained" filter

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 14 Aug 2008 12:01:56 +0200

synaptic (0.62.1ubuntu5) intrepid; urgency=low

  * debian/control: 
    - make deborphan and apt-xapian-index suggests instead of recommends
      to save space on the CD - this means we loose the quick search
      feature in the default install
  * po/es.po:
    - updated spanish translation (thanks to 
      Francisco Javier Cuadrado)
  * gtk/glade/dialog_upgrade.glade:
    - provide a mnemonics in the upgrade dialog,
      closes: #491179 (thanks to Matt Kraai)
  * gtk/glade/window_fetch.glade:
    - dialog fix (thanks to Oded Arbel) (LP: #228127)
  * gtk/rgdebinstallprogress.cc:
    - intercept ctrl-c in the terminal window and ask