@@ -142,8 +142,10 @@ class RPackageLister {
    RPackageViewSearch *_searchView; // the package view that does the (simple) search
 
    // helper for the limitBySearch() code
+   static const int qualityCutoff = 25;
+   static const int maxAltTerms = 15;
    bool xapianSearch(string searchString);
-   
+
    public:
 
    unsigned int _viewMode;
