@@ -3,6 +3,9 @@ synaptic (0.62.1ubuntu9) intrepid; urgency=low
   * gtk/rgmainwindow.cc:
     - only xapian search when more than one char is used
       in the search querry (LP: #260739)
+  * common/rpackagelister.{cc,h}:
+    - expand partial strings in search as you type so that
+      "ged" finds "gedit" (LP: #261423)
 
  --
 
